# pikaxps

./: .gitignore  CITATION.cff  COMMERCIAL-LICENSE.md  Corepeak.spec  README.md  THIRD-PARTY-LICENSES.txt  XPSFit Studio.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-windows.yml
build_scripts/: entry.py  icon.icns  launch_check.py  make_dmg.sh  make_icon.py  make_samples.py  make_screenshot.py
docs/: BUILD_WINDOWS.md  TRAFFIC-PLAN.md  설치안내.txt
samples/: C1s_carbon.csv  Pt4f_kinetic.txt  S2p_MoS2.xlsx
src/xpsfit/: __init__.py  app.py
src/xpsfit/core/: audit.py  backgrounds.py  batch.py  diagnose.py  fitting.py  lineshapes.py  quantify.py  session.py  spectrum.py
src/xpsfit/io/: export.py  importer.py  vamas_io.py
src/xpsfit/refdb/: __init__.py  binding_energies.json  recipes.json
src/xpsfit/refdb/explanations/: backgrounds.md  charge_referencing.md  constraints.md  lineshapes.md  quantification.md  satellites.md  workflow.md
src/xpsfit/refdb/explanations/en/: backgrounds.md  charge_referencing.md  (+5 more)
src/xpsfit/ui/: dialogs.py  help_panel.py  i18n.py  import_wizard.py  main_window.py  peak_table.py  plot_widget.py  quantify_panel.py  refdb_panel.py  state_editor.py  theme.py
tests/: test_active_bg.py  test_audit.py  test_backgrounds.py  test_diagnose.py  test_fitting.py  test_gui_smoke.py  test_importer.py  test_importer_excel_paste.py  test_lineshapes.py  test_quantify_export.py  test_refdb.py  test_session.py  test_user_db.py  test_window_confinement.py
web/: astro.config.mjs  package-lock.json  package.json
web/public/: robots.txt
web/src/components/: Footer.astro  Landing.astro
web/src/content/docs/: cite.md  compare.md  contribute.md  download.md  features.md  feedback.md
web/src/styles/: custom.css
(+10 files in other folders)
